--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1><p>이젠 멀어져 기억 속으로 묻혀</p></h1>
     <h2>사랑이란 무엇인가</h2>
     <ol>
-      <li>사랑의 정의
-      <li>내가 사랑하는것
-      <li>내가 사랑하는 사람들
+      <li><a href="1index.html">사랑의 정의</a></li>
+      <li><a>내가 사랑하는것</a></li>
+      <li><a>내가 사랑하는 사람들</a></li>
     </ol>
   </head>
   <body>
